    data from one database to another (dallas).
  * The Special:History page now implements the same UI as Mediawiki with radio
    buttons instead of checkboxes.
  * Unit test coverage has been significantly improved.
  * Support added for definition lists of the form "; term : definition".
  * Support added to allow use of HTML list tags ("ol", "dl", "dt", "li", and
    "ul").
  * Sub-headings in the table of contents should be of the form "1.1.1" to
    match Mediawiki.  Reported by Sil68.
  * Upgrade to Spring Framework 2.5.3.
  * Upgrade to commons-lang 2.4.

Bugfixes:

  * Unbalanced / unclosed HTML tags will now be automatically closed by the
    parser.  Originally reported by Michael Habbert.
  * Fix an issue that prevented error messages from being correctly reported on
    the Special:Maintenance page.
  * Resolve a problem that prevented __TOC__ tags within tables from being
    processed.  Reported by an anonymous user.
  * Wiki table captions now process table CSS such as |+align="bottom"|caption.
    Reported by an anonymous user.
  * Image files were being cached unnecessarily, leading to excessive memory
    use.  Reported by Jim.
  * Underscores in template names should be ignored so that {{Template Name}}
    and {{Template_Name}} are seen as equivalent.  Reported by yesesnono.
  * Fix an issue where in some cases (most commonly after server restarts) a
    remembered user could be incorrectly loaded as a null user.

Translation Updates:

  * Updated Japanese translations (nattolover).


0.6.5
=====

New Features:

  * Support added for Sybase ASA (dallas).
  * The spam filter will now also check descriptions for uploaded files in
    order to block spam from bots using this path.
  * Updated spam filter patterns.

Bugfixes:
  * Fix a problem that could cause HSQL to generate locking errors on context
    reload (dallas).
  * Resolve a problem that could cause database connection lockups during